# NetFramework

./: CMakeLists.txt  Core.h  ISPtr.h  README.md  test_resv.cpp  test_send.cpp  test_smart_pointers.cpp
Core/: Core.h  ISPtr.h  SPtr.cpp  test_smart_pointers.cpp
Core/BLOB/: BLOB.cpp  Database.cpp  IBLOB.h  IDatabase.h
Core/FS/: FS.cpp  IFS.h
Core/HTTP/: HTTP.cpp  IHTTP.h
Core/NET/: INET.h  NET.cpp
Core/NET/test/: test_resv.cpp  test_send.cpp
Core/SHA3/: ISHA3.h
FS/: FS.cpp  IFS.h
HTTP/: HTTP.cpp  IHTTP.h
NET/: INET.h  NET.cpp
NET/test/: test_resv.cpp  test_send.cpp
